# INSERT_NAME

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  UML  compile_commands.json
cmake/: FindCling.cmake  FindEnTT.cmake  FindRJson.cmake  FindRaylib.cmake  FindSDL2_gfx.cmake  FindSDL2_net.cmake
components/: components.hpp
config/: config.cpp
controller/: main.cpp
data-layer/: cacheManager.cpp  cacheManager.hpp  jsonParser.cpp  jsonParser.hpp  resources.cpp  resources.hpp
data/assets/Characters/: glitch.fla
data/assets/Characters/1/1.0/: Thumbs.db
data/assets/Characters/10/10.0/: Thumbs.db
data/assets/Characters/11/11.0/: Thumbs.db
data/assets/Characters/2/2.0/: Thumbs.db
data/assets/Characters/3/3.0/: Thumbs.db
data/assets/Characters/4/4.0/: Thumbs.db
data/assets/Characters/5/5.0/: Thumbs.db
data/assets/Characters/6/6.0/: Thumbs.db
data/assets/Characters/7/7.0/: Thumbs.db
data/assets/Characters/8/8.0/: Thumbs.db
data/assets/Characters/9/9.0/: Thumbs.db
data/assets/background/background1/: Thumbs.db
data/assets/buttons/: Thumbs.db
data/assets/buttons/button_active/: Thumbs.db
data/lessons/: index.json
data/lessons/dlc/: index.json
data/lessons/introduction/: 1_introduction.json  index.json
data/lessons/visual/: index.json  visual.json
data/lessons/visual/tools/: char2.json  char3.json  char4.json  char5.json  char6.json  char7.json  char8.json  index.json  pointer.json  variable.json
data/lessons/world_1/: 1_variables.json  index.json
data/lessons/world_2/: index.json
data/lessons/world_3/: index.json
data/lessons/world_4/: index.json
data/lessons/world_5/: index.json
data/lessons/world_6/: index.json
data/lessons/world_bonus_1/: index.json
data/lessons/world_bonus_3/: index.json
data/sound/: text
scenes/: include_scenes.hpp  level_select.cpp  level_select.hpp  main_menu.cpp  main_menu.hpp  pause_menu.cpp  pause_menu.hpp  sandbox.cpp  sandbox.hpp  scene.cpp  scene.hpp  transition.cpp  transition.hpp
scenes/lesson/: lesson.cpp  lesson.hpp
scenes/lesson/text/: text_editor.cpp  text_editor.hpp  text_rep.cpp  text_rep.hpp
scenes/lesson/visual/: visual_editor.cpp  visual_editor.hpp  visual_rep.cpp  visual_rep.hpp
scenes/menus/: level_select.cpp  level_select.hpp  main_menu.cpp  main_menu.hpp  pause_menu.cpp  pause_menu.hpp  sandbox_menu.cpp  sandbox_menu.hpp  start_screen.cpp  start_screen.hpp
systems/: animManager.cpp  animManager.hpp  easings.h  systems.cpp  systems.hpp  text.cpp  text.hpp
